# sdkwork-llm

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  package.json  sdkwork.app.config.json  sdkwork.workflow.json
.sdkwork/: README.md
.sdkwork/plugins/: README.md
.sdkwork/skills/: README.md
apis/: README.md  authority-manifest.json
apis/app-api/: Llm-app-api.openapi.json
apis/backend-api/: Llm-backend-api.openapi.json
apis/rpc/: README.md
apps/: README.md
configs/: sdkwork-api-cloud-gateway.llm.development.toml  sdkwork-api-cloud-gateway.llm.production.toml
configs/topology/: cloud.split-services.development.env  cloud.split-services.production.env
crates/sdkwork-intelligence-Llm-repository-sqlx/: Cargo.toml
crates/sdkwork-intelligence-Llm-repository-sqlx/specs/: component.spec.json
crates/sdkwork-intelligence-Llm-repository-sqlx/src/: bootstrap.rs  db.rs  lib.rs
crates/sdkwork-intelligence-Llm-service/: Cargo.toml
crates/sdkwork-intelligence-Llm-service/specs/: component.spec.json
crates/sdkwork-intelligence-Llm-service/src/: app_backend_api.rs  backend_admin_api.rs  candidate_promotion.rs  lib.rs  open_api.rs  platform.rs
crates/sdkwork-llm-api-server/: Cargo.toml
crates/sdkwork-llm-api-server/specs/: component.spec.json
crates/sdkwork-llm-api-server/src/: bootstrap.rs  main.rs
crates/sdkwork-llm-contract/: Cargo.toml
crates/sdkwork-llm-contract/specs/: component.spec.json
crates/sdkwork-llm-contract/src/: app_ports.rs  backend_ports.rs  dto.rs  lib.rs  ports.rs  runtime_env.rs  space.rs
crates/sdkwork-llm-core/: Cargo.toml
crates/sdkwork-llm-core/src/: context_pack.rs
crates/sdkwork-llm-core/tests/: context_pack.rs  no_embedding_retrieval.rs
crates/sdkwork-llm-database-host/: Cargo.toml
crates/sdkwork-llm-database-host/specs/: component.spec.json
crates/sdkwork-llm-database-host/src/: lib.rs
crates/sdkwork-llm-gateway-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-llm-gateway-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-llm-integration-tests/: Cargo.toml
crates/sdkwork-llm-integration-tests/tests/: api_server_smoke_test.rs  app_api_mvp_flow.rs  app_backend_api_smoke_test.rs  backend_api_admin_flow.rs  governance_and_audit_flow.rs  llm_no_embedding_mvp_test.rs  open_api_smoke_test.rs
crates/sdkwork-llm-runtime/: Cargo.toml
crates/sdkwork-llm-runtime/src/: lib.rs  profile.rs
crates/sdkwork-llm-runtime/tests/: profile_resolution_contract.rs
crates/sdkwork-llm-spi/: Cargo.toml
crates/sdkwork-llm-spi/src/: error.rs  lib.rs  manifest.rs  ports.rs  registry.rs  runtime.rs
crates/sdkwork-llm-spi/tests/: manifest_contract.rs  ports_contract.rs  registry_contract.rs
crates/sdkwork-llm-standalone-gateway/: Cargo.toml
crates/sdkwork-llm-standalone-gateway/specs/: component.spec.json
crates/sdkwork-llm-standalone-gateway/src/: bootstrap.rs  main.rs
crates/sdkwork-llm-test-support/: Cargo.toml
crates/sdkwork-llm-test-support/src/: lib.rs
crates/sdkwork-llm-test-support/tests/: conformance_harness_contract.rs
crates/sdkwork-router-Llm-app-api/: Cargo.toml  README.md
crates/sdkwork-router-Llm-app-api/specs/: component.spec.json
crates/sdkwork-router-Llm-app-api/src/: auth.rs  error.rs  http_route_manifest.rs  lib.rs  manifest.rs  routes.rs  web_bootstrap.rs
crates/sdkwork-router-Llm-app-api/tests/: app_api_routes.rs  app_openapi_routes.rs  app_web_framework_routes.rs  route_manifest_contract.rs
crates/sdkwork-router-Llm-backend-api/: Cargo.toml  README.md
crates/sdkwork-router-Llm-common/: Cargo.toml
crates/sdkwork-router-Llm-open-api/: Cargo.toml  README.md
crates/sdkwork-routes-Llm-app-api/: Cargo.toml  README.md
crates/sdkwork-routes-Llm-backend-api/: Cargo.toml  README.md
crates/sdkwork-routes-Llm-common/: Cargo.toml
crates/sdkwork-routes-Llm-common/src/: lib.rs
crates/sdkwork-routes-Llm-open-api/: Cargo.toml  README.md
database/: README.md  database.manifest.json
database/contract/: prefix-registry.json  schema.yaml  table-registry.json
deployments/docker/: Dockerfile  README.md
deployments/kubernetes/: README.md  deployment.yaml  service.yaml
docs/: INDEX.yaml  README.md  topology-standard.md
docs/product/prd/: PRD.md
docs/schema-registry/: README.md
plugins/sdkwork-llm-plugin-native-sql/: Cargo.toml  sdkwork.llm.plugin.json
plugins/sdkwork-llm-plugin-native-sql/migrations/postgres/: V202606100001__llm_phase1.sql
plugins/sdkwork-llm-plugin-native-sql/migrations/sqlite/: V202606100001__llm_phase1.sql
plugins/sdkwork-llm-plugin-native-sql/src/: admin_tables.rs  lib.rs  manifest.rs  store.rs
plugins/sdkwork-llm-plugin-native-sql/tests/: manifest_matches_json.rs  sqlite_store_contract.rs
plugins/sdkwork-llm-plugin-reference-profiles/: Cargo.toml  sdkwork.llm.plugin.json
plugins/sdkwork-llm-plugin-reference-profiles/src/: lib.rs  manifest.rs  reference_runtime.rs
plugins/sdkwork-llm-plugin-reference-profiles/tests/: manifest_matches_json.rs  reference_runtime_contract.rs
scripts/: generate-llm-sdk.mjs  llm-dev.mjs
scripts/lib/: Llm-topology.mjs
sdks/: README.md  standardize-Llm-sdk-family.mjs
sdks/sdkwork-llm-app-sdk/: .sdkwork-assembly.json  README.md  sdk-manifest.json
sdks/sdkwork-llm-backend-sdk/: .sdkwork-assembly.json  README.md  sdk-manifest.json
sdks/sdkwork-llm-sdk/: .sdkwork-assembly.json  README.md  sdk-manifest.json
sdks/test/: verify-sdk-ownership-boundaries.test.mjs
specs/: README.md  component.spec.json  topology.spec.json
tests/contracts/: native_sql_migration_contract_test.mjs  open_api_prefix_contract_test.mjs  openapi_phase1_contract_test.mjs  route_manifest_openapi_parity_test.mjs  runtime_plugin_layout_contract_test.mjs  rust_spi_boundary_contract_test.mjs  schema_registry_phase1_contract_test.mjs  spi_design_contract_test.mjs
tools/: align_llm_domain.mjs  check_sdkwork_llm_architecture_alignment.mjs  materialize_llm_database_contract.mjs  materialize_phase1_contracts.mjs  verify_openapi_operation_ids.ps1  verify_phase1.ps1  verify_sdkwork_structure.ps1
(+100 files in other folders)
