[package]
name = "sdkwork-llm-api-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sdkwork-llm-api-server"
path = "src/main.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sdkwork-router-llm-open-api.workspace = true
sdkwork-router-llm-app-api.workspace = true
sdkwork-router-llm-backend-api.workspace = true
sdkwork-intelligence-llm-repository-sqlx.workspace = true
sdkwork-intelligence-llm-service.workspace = true
