[package]
name = "sdkwork-llm-integration-tests"
version.workspace = true
edition.workspace = true
publish = false

[dev-dependencies]
axum.workspace = true
http.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
sdkwork-iam-web-adapter.workspace = true
sdkwork-intelligence-llm-service.workspace = true
sdkwork-llm-contract.workspace = true
sdkwork-llm-plugin-native-sql.workspace = true
sdkwork-llm-spi.workspace = true
sdkwork-router-llm-app-api.workspace = true
sdkwork-router-llm-open-api.workspace = true
sdkwork-router-llm-backend-api.workspace = true
sdkwork-web-core.workspace = true
sdkwork-llm-api-server = { path = "../sdkwork-llm-api-server" }
