[package]
name = "sdkwork-llm-standalone-gateway"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sdkwork-llm-standalone-gateway"
path = "src/main.rs"

[dependencies]
sdkwork_llm_gateway_assembly = { package = "sdkwork-llm-gateway-assembly", path = "../sdkwork-llm-gateway-assembly" }
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sdkwork-web-bootstrap.workspace = true

