[package]
name = "sdkwork-llm-plugin-reference-profiles"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
serde_json.workspace = true
sdkwork-utils-rust.workspace = true
sdkwork-llm-spi = { path = "../../crates/sdkwork-llm-spi" }

[dev-dependencies]
serde_json.workspace = true
tokio.workspace = true
